--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
                                     </div>
                                     <div class="single-gallery-project__content">
                                         <h4 class="title">BATHROOMS</h4>
-                                        <a href="project-details.html">SEE MORE</a>
+                                        <a href="service-details.html">SEE MORE</a>
                                     </div>
                                 </div>
                             </div>
@@ -508,7 +508,7 @@
                                     </div>
                                     <div class="single-gallery-project__content">
                                         <h4 class="title">KITCHEN CABINETS</h4>
-                                        <a href="project-details.html">SEE MORE</a>
+                                        <a href="service-details.html">SEE MORE</a>
                                     </div>
                                 </div>
                             </div>
@@ -519,7 +519,7 @@
                                     </div>
                                     <div class="single-gallery-project__content">
                                         <h4 class="title">KITCHEN COUNTERS</h4>
-                                        <a href="project-details.html">SEE MORE</a>
+                                        <a href="service-details.html">SEE MORE</a>
                                     </div>
                                 </div>
                             </div>
@@ -530,7 +530,7 @@
                                     </div>
                                     <div class="single-gallery-project__content">
                                         <h4 class="title">BATHROOM REDESIGN</h4>
-                                        <a href="project-details.html">SEE MORE</a>
+                                        <a href="service-details.html">SEE MORE</a>
                                     </div>
                                 </div>
                             </div>
