--- a/index.html
+++ b/index.html
@@ -652,9 +652,9 @@
                                     <h4 class="footer-widget__title">USEFUL LINKS</h4>
                                     <ul class="footer-widget__navigation">
                                         <li><a href="#">Home</a></li>
-                                        <li><a href="#">About</a></li>
-                                        <li><a href="#">Service</a></li>
-                                        <li><a href="#">Contact Us</a></li>
+                                        <li><a href="about.html">About</a></li>
+                                        <li><a href="service-details.html">Service</a></li>
+                                        <li><a href="contact.html">Contact Us</a></li>
                                     </ul>
                                 </div>
                             </div>
