--- a/about.html
+++ b/about.html
@@ -203,7 +203,7 @@
                     <div class="col-lg-6 col-12 mb-30">
                         <div class="about-content-two">
                             <h3>We're glad you made it!</h3>
-                            <h1>25 Years of Industry Experience</h1>
+                            <h1>20 Years of Industry Experience</h1>
                             <h4>We can build your dream home, quickly.</h4>
                             <p>Many homeowners will say that it is hard to find a reliable, and professional home repair person. With over 25 years of experience, you can trust Edward Jr. Construction as a team of home improvement professionals.</p>
                             <a href="service-details.html" class="ht-btn--default ht-btn--default--dark-hover section-space--top--20">Our Services</a>
@@ -281,7 +281,7 @@
                     <div class="col-lg-6 col-12 order-3 order-lg-1">
                         <div class="about-content about-content-1">
                             <h1><span>25</span>Years of Experience</h1>
-                            <p>As a family-owned construction company, Edward Jr Construction has been building custom residential & commercial projects for over 25 years. We are passionate about our work and above all, love the challenge of building complex custom homes, restoring historic buildings, or fulfilling our clients' dreams.</p>
+                            <p>As a family-owned construction company, Edward Jr Construction has been building custom residential & commercial projects for over 20 years. We are passionate about our work and above all, love the challenge of building complex custom homes, restoring historic buildings, or fulfilling our clients' dreams.</p>
                         </div>
                     </div>
 
@@ -306,7 +306,7 @@
 
                                 <div class="single-fact col-md-3 col-6 section-space--bottom--30">
                                     <img src="assets/img/icons/funfact-project.png" alt="">
-                                    <h1 class="counter">798</h1>
+                                    <h1 class="counter">7000+</h1>
                                     <h4>Projects</h4>
                                 </div>
 
