--- a/contact.html
+++ b/contact.html
@@ -185,11 +185,11 @@
         <div class="conact-section">
             <div class="container">
 
-                <div class="row section-space--bottom--50">
+                <!-- <div class="row section-space--bottom--50">
                     <div class="col">
                         <div id="contact-map" class="contact-map"></div>
                     </div>
-                </div>
+                </div> -->
 
                 <div class="row">
                     <div class="col-lg-4 col-12">
