--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Edward Jr.'s Construction LLC </title>
+    <title>Edward's Jr. Construction LLC </title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Favicon -->
@@ -326,7 +326,7 @@
                     <!-- section title -->
                     <div class="section-title-area text-center section-space--bottom--50">
                         <h2 class="section-title">Our Services</h2>
-                        <p class="section-subtitle">Eduard Jr. Construction...has remodeling service all-in-one!</p>
+                        <p class="section-subtitle">Edward Jr. Construction...has remodeling service all-in-one!</p>
                     </div>
                 </div>
                 <div class="col-lg-12">
