--- a/service-details.html
+++ b/service-details.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Edward Jr.'s Construction LLC </title>
+    <title>Edward's Jr. Construction LLC </title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Favicon -->
@@ -412,7 +412,7 @@
                                         <p class="address">Conyer, GA. 30094</p>
                                         <ul class="contact-details">
                                             <li><span>P:</span>(770) 549-8304</li>
-                                            <li><span>E:</span>edwardjrconstruction@gmail.com</li>
+                                            <li><span>E:</span>eduard@edjrconstruction.com</li>
                                         </ul>
                                     </div>
                                 </div>
