--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Edward Jr.'s Construction LLC </title>
+    <title>Edward's Jr. Construction LLC </title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Favicon -->
@@ -98,7 +98,8 @@
                                         </div>
                                         <div class="header-info-single-item__content">
                                             <h6 class="header-info-single-item__title">Phone</h6>
-                                            <p class="header-info-single-item__subtitle"><a href="tel://7705498304">(770) 549-8304</a></p>
+                                            <p class="header-info-single-item__subtitle"><a
+                                                    href="tel://7705498304">(770) 549-8304</a></p>
                                         </div>
                                     </div>
                                     <div class="header-info-single-item">
@@ -206,7 +207,8 @@
                                 </li>
                                 <li>
                                     <span class="icon"><i class="ion-ios-email-outline"></i></span>
-                                    <span style="padding-top: 3%;" class="text"><a href="#">eduard@edjrconstruction.com</a></span>
+                                    <span style="padding-top: 3%;" class="text"><a
+                                            href="#">eduard@edjrconstruction.com</a></span>
                                 </li>
                             </ul>
                         </div>
@@ -216,9 +218,12 @@
                             <h3>Leave Your Message</h3>
                             <form id="contact-form" action="http://whizthemes.com/mail-php/mail.php" method="post">
                                 <div class="row row-10">
-                                    <div class="col-md-6 col-12 section-space--bottom--20"><input name="con_name" type="text" placeholder="Your Name"></div>
-                                    <div class="col-md-6 col-12 section-space--bottom--20"><input name="con_email" type="email" placeholder="Your Email"></div>
-                                    <div class="col-12"><textarea name="con_message" placeholder="Your Message"></textarea></div>
+                                    <div class="col-md-6 col-12 section-space--bottom--20"><input name="con_name"
+                                            type="text" placeholder="Your Name"></div>
+                                    <div class="col-md-6 col-12 section-space--bottom--20"><input name="con_email"
+                                            type="email" placeholder="Your Email"></div>
+                                    <div class="col-12"><textarea name="con_message"
+                                            placeholder="Your Message"></textarea></div>
                                     <div class="col-12"><button>Send Message</button></div>
                                 </div>
                             </form>
@@ -331,7 +336,10 @@
                                         </a>
                                     </div>
                                     <div class="footer-desc">
-                                        You don't want to put your life on hold to fix the door that won't close, or patch the hole in your drywall, and we understand that. That’s why our team respects your schedule and arrives with all the tools and equipment necessary to provide an efficient, reliable handyman service.
+                                        You don't want to put your life on hold to fix the door that won't close, or
+                                        patch the hole in your drywall, and we understand that. That’s why our team
+                                        respects your schedule and arrives with all the tools and equipment necessary to
+                                        provide an efficient, reliable handyman service.
                                     </div>
 
                                 </div>
@@ -413,15 +421,19 @@
                     <div class="off-canvas-contact-widget">
                         <div class="header-contact-info">
                             <ul class="header-contact-info__list">
-                                <li><i class="ion-android-phone-portrait"></i> <a href="tel://7705498304">(770) 549-8304</a></li>
-                                <li><i class="ion-android-mail"></i><a href="mailto:eduard@edjrconstruction.com">eduard@edjrconstruction.com</a></li>
+                                <li><i class="ion-android-phone-portrait"></i> <a href="tel://7705498304">(770)
+                                        549-8304</a></li>
+                                <li><i class="ion-android-mail"></i><a
+                                        href="mailto:eduard@edjrconstruction.com">eduard@edjrconstruction.com</a></li>
                             </ul>
                         </div>
                     </div>
                     <!--Off Canvas Widget Social Start-->
                     <div class="off-canvas-widget-social">
-                        <a href="https://www.facebook.com/Edward-Jr-Construction-108580157440704" title="Facebook"><i class="fa fa-facebook"></i></a>
-                        <a href="https://www.instagram.com/eduardperju/" title="Instagram"><i class="fa fa-instagram"></i></a>
+                        <a href="https://www.facebook.com/Edward-Jr-Construction-108580157440704" title="Facebook"><i
+                                class="fa fa-facebook"></i></a>
+                        <a href="https://www.instagram.com/eduardperju/" title="Instagram"><i
+                                class="fa fa-instagram"></i></a>
                     </div>
                     <!--Off Canvas Widget Social End-->
                 </div>
