--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Edward's Jr. Construction LLC </title>
+    <title>Edward Jr.'s Construction LLC </title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Favicon -->
@@ -216,7 +216,7 @@
                     <div class="col-lg-8 col-12">
                         <div class="contact-form">
                             <h3>Leave Your Message</h3>
-                            <form id="contact-form" action="http://whizthemes.com/mail-php/mail.php" method="post">
+                            <form id="contact-form" action="assets/php/mail.php" method="post">
                                 <div class="row row-10">
                                     <div class="col-md-6 col-12 section-space--bottom--20"><input name="con_name"
                                             type="text" placeholder="Your Name"></div>
