--- a/contact.html
+++ b/contact.html
@@ -378,7 +378,7 @@
         </div>
         <div class="footer-copyright-wrapper">
             <div class="footer-copyright text-center">
-                Copyright © 2020. Edward's Jr. Construction
+                Copyright © 2020. Edward's Jr. Construction & Designed By MMG LLC
             </div>
         </div>
     </div>
