--- a/index.html
+++ b/index.html
@@ -680,7 +680,7 @@
         </div>
         <div class="footer-copyright-wrapper">
             <div class="footer-copyright text-center">
-                Copyright © 2020. Edward's Jr. Construction
+                Copyright © 2020. Edward's Jr. Construction & Designed By MMG LLC
             </div>
         </div>
     </div>
