correcting city and adding attribution.

--- a/index.html
+++ b/index.html
@@ -665,7 +665,7 @@
                                     <div class="footer-widget__content">
                                         <p class="address" style="min-width: 180px; margin-bottom: .08em;">3000 Stone
                                             Bridge Trl SW</p>
-                                        <p class="address">Conyer, GA. 30094</p>
+                                        <p class="address">Conyers, GA. 30094</p>
                                         <ul class="contact-details">
                                             <li><span>P:</span>(770) 549-8304</li>
                                             <li><span>E:</span>eduard@edjrconstruction.com</li>
