--- a/service-details.html
+++ b/service-details.html
@@ -409,7 +409,7 @@
                                     <div class="footer-widget__content">
                                         <p class="address" style="min-width: 180px; margin-bottom: .08em;">3000 Stone
                                             Bridge Trl SW</p>
-                                        <p class="address">Conyer, GA. 30094</p>
+                                        <p class="address">Conyers, GA. 30094</p>
                                         <ul class="contact-details">
                                             <li><span>P:</span>(770) 549-8304</li>
                                             <li><span>E:</span>eduard@edjrconstruction.com</li>
@@ -424,7 +424,7 @@
         </div>
         <div class="footer-copyright-wrapper">
             <div class="footer-copyright text-center">
-                Copyright © 2020. Edward's Jr. Construction & Designed By MMG LLC
+                Copyright © 2020. Edward's Jr. Construction & Designed By Major Media Group LLC
             </div>
         </div>
     </div>
