--- a/about.html
+++ b/about.html
@@ -566,7 +566,7 @@
         </div>
         <div class="footer-copyright-wrapper">
             <div class="footer-copyright text-center">
-                Copyright © 2020. Edward's Jr. Construction & Designed By MMG LLC
+                Copyright © 2020. Edward's Jr. Construction & Designed By Major Media Group LLC
             </div>
         </div>
     </div>
