Updating service-details.html href's.

--- a/about.html
+++ b/about.html
@@ -139,9 +139,9 @@
                                             <li><a href="about.html">ABOUT</a></li>
 
                                             <li>
-                                                <a href="service.html">SERVICES</a>
+                                                <a href="service-details.html">SERVICES</a>
                                                 <ul class="submenu">
-                                                    <li><a href="service.html">Service Page</a></li>
+                                                    <li><a href="service-details.html">Service Page</a></li>
                                                     <li><a href="service-details.html">Service Details Left Sidebar</a>
                                                     </li>
                                                 </ul>
@@ -594,7 +594,7 @@
                         </li>
                         <li><a href="about.html">About</a></li>
                         <li class="menu-item-has-children">
-                            <a href="service.html">Services</a>
+                            <a href="service-details.html">Services</a>
                         </li>
 
                         <li class="menu-item-has-children">
