--- a/service-details.html
+++ b/service-details.html
@@ -142,7 +142,7 @@
                                             <li>
                                                 <a href="service-details.html">SERVICES</a>
                                                 <ul class="submenu">
-                                                    <li><a href="service.html">Service Page</a></li>
+                                                    <li><a href="service-details.html">Service Page</a></li>
                                                     <li><a href="service-details.html">Service Details Left Sidebar</a>
                                                     </li>
                                                 </ul>
@@ -452,7 +452,7 @@
                         </li>
                         <li><a href="about.html">About</a></li>
                         <li class="menu-item-has-children">
-                            <a href="service.html">Services</a>
+                            <a href="service-details.html">Services</a>
                         </li>
 
                         <li class="menu-item-has-children">
@@ -468,8 +468,12 @@
                         <div class="header-contact-info">
                             <ul class="header-contact-info__list">
                                 <li><i class="ion-android-phone-portrait"></i><a href="tel://7705498304">(770) 549-8304</a></li>
-                                <li><i class="ion-android-mail"></i> <a
-                                        href="mailto:eduard@edjrconstruction.com">eduard@edjrconstruction.com</a></li>
+                                <li>
+                                    <i class="ion-android-mail"></i> 
+                                    <a href="mailto:eduard@edjrconstruction.com">
+                                    eduard@edjrconstruction.com
+                                    </a>
+                                </li>
                             </ul>
                         </div>
                     </div>
