--- a/contact.html
+++ b/contact.html
@@ -406,7 +406,7 @@
                         </li>
                         <li><a href="about.html">About</a></li>
                         <li class="menu-item-has-children">
-                            <a href="service.html">Services</a>
+                            <a href="service-details.html">Services</a>
                         </li>
 
                         <li class="menu-item-has-children">
