--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Favicon -->
     <link rel="icon" href="./favicon.ico">
-    <link rel="icon" sizes="48x48" href="assets/img/favicons/android-icon-48x48.png">
+    link rel="icon" sizes="48x48" href="assets/img/favicons/android-icon-48x48.png">
     <link rel="icon" sizes="96x96" href="assets/img/favicons/android-icon-96x96.png">
     <link rel="icon" sizes="144x144" href="assets/img/favicons/android-icon-144x144.png">
     <link rel="icon" sizes="192x192" href="assets/img/favicons/android-icon-192x192.png">
