Removing projects nav link in mobile menu area.

--- a/service-details.html
+++ b/service-details.html
@@ -455,8 +455,9 @@
                             <a href="service-details.html">Services</a>
                         </li>
 
-                        <li class="menu-item-has-children">
+                        <!-- <li class="menu-item-has-children">
                             <a href="javascript:void(0)">Projects</a>
+                        </li> -->
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </nav>
