Adding business credits and hopefully fixing phone view menu links.

--- a/index.html
+++ b/index.html
@@ -744,7 +744,7 @@
                 <nav class="offcanvas-navigation">
                     <ul>
                         <li class="menu-item-has-children">
-                            <a href="#">Home</a>
+                            <a href="index.html">Home</a>
                         </li>
                         <li><a href="about.html">About</a></li>
                         <li class="menu-item-has-children">
@@ -764,8 +764,12 @@
                     <div class="off-canvas-contact-widget">
                         <div class="header-contact-info">
                             <ul class="header-contact-info__list">
-                                <li><i class="ion-android-phone-portrait"></i><a href="tel://7705498304">(770)
-                                        549-8304</a></li>
+                                <li>
+                                    <i class="ion-android-phone-portrait"></i>
+                                    <a href="tel://7705498304">
+                                        (770) 549-8304
+                                    </a>
+                                </li>
                                 <li><i class="ion-android-mail"></i> <a
                                         href="mailto:eduard@edjrconstruction.com">eduard@edjrconstruction.com</a></li>
                             </ul>
