--- a/contact.html
+++ b/contact.html
@@ -378,7 +378,7 @@
         </div>
         <div class="footer-copyright-wrapper">
             <div class="footer-copyright text-center">
-                Copyright © 2020. Edward's Jr. Construction & Designed By Major Media Group LLC
+                Copyright © 2020. Edward's Jr. Construction & Designed By Major Media Group LLC 
             </div>
         </div>
     </div>
@@ -402,7 +402,7 @@
                 <nav class="offcanvas-navigation">
                     <ul>
                         <li class="menu-item-has-children">
-                            <a href="#">Home</a>
+                            <a href="index.html">Home</a>
                         </li>
                         <li><a href="about.html">About</a></li>
                         <li class="menu-item-has-children">
