--- a/service-details.html
+++ b/service-details.html
@@ -448,7 +448,7 @@
                 <nav class="offcanvas-navigation">
                     <ul>
                         <li class="menu-item-has-children">
-                            <a href="#">Home</a>
+                            <a href="index.html">Home</a>
                         </li>
                         <li><a href="about.html">About</a></li>
                         <li class="menu-item-has-children">
@@ -468,7 +468,10 @@
                     <div class="off-canvas-contact-widget">
                         <div class="header-contact-info">
                             <ul class="header-contact-info__list">
-                                <li><i class="ion-android-phone-portrait"></i><a href="tel://7705498304">(770) 549-8304</a></li>
+                                <li>
+                                    <i class="ion-android-phone-portrait"></i>
+                                    <a href="tel://7705498304">(770) 549-8304</a>
+                                </li>
                                 <li>
                                     <i class="ion-android-mail"></i> 
                                     <a href="mailto:eduard@edjrconstruction.com">
