Adjusting miliseconds on testimonial slider for better reading.

--- a/about.html
+++ b/about.html
@@ -356,8 +356,7 @@
         <!--====================  testimonial slider area ====================-->
         <div class="testimonial-slider-area testimonial-slider-area-bg section-space--inner--120 bg-img"
             data-bg="assets/img/backgrounds/testimonial1.jpg" style="    background-position: center;
-    background-position-y: 40%;
-">
+    background-position-y: 40%;">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-10 m-auto">
@@ -524,10 +523,14 @@
                                         </a>
                                     </div>
                                     <div class="footer-desc">
-                                        You don't want to put your life on hold to fix the door that won't close, or
-                                        patch the hole in your drywall, and we understand that. That’s why our team
-                                        respects your schedule and arrives with all the tools and equipment necessary to
-                                        provide an efficient, reliable handyman service.
+                                        <em>
+                                            <strong>
+                                                You don't want to put your life on hold to fix the door that won't close, or
+                                                patch the hole in your drywall, and we understand that. That’s why our team
+                                                respects your schedule and arrives with all the tools and equipment necessary to
+                                                provide an efficient, reliable handyman service.
+                                            </strong>
+                                        </em>
                                     </div>
 
                                 </div>
