--- a/index.html
+++ b/index.html
@@ -678,10 +678,14 @@
                                         </a>
                                     </div>
                                     <div class="footer-desc">
-                                        You don't want to put your life on hold to fix the door that won't close, or
-                                        patch the hole in your drywall, and we understand that. That’s why our team
-                                        respects your schedule and arrives with all the tools and equipment necessary to
-                                        provide an efficient, reliable handyman service.
+                                        <em>
+                                            <strong>
+                                                You don't want to put your life on hold to fix the door that won't close, or
+                                                patch the hole in your drywall, and we understand that. That’s why our team
+                                                respects your schedule and arrives with all the tools and equipment necessary to
+                                                provide an efficient, reliable handyman service.
+                                            </strong>
+                                        </em>
                                     </div>
 
                                 </div>
