Changing telephone link to href call action.

--- a/contact.html
+++ b/contact.html
@@ -99,7 +99,8 @@
                                         <div class="header-info-single-item__content">
                                             <h6 class="header-info-single-item__title">Phone</h6>
                                             <p class="header-info-single-item__subtitle"><a
-                                                    href="tel://7705498304">(770) 549-8304</a></p>
+                                                    href="tel:770-549-8304"><a href="tel:770-549-8304">(770)
+                                        549-8304</a></a></p>
                                         </div>
                                     </div>
                                     <div class="header-info-single-item">
@@ -203,7 +204,8 @@
                                 </li>
                                 <li>
                                     <span class="icon"><i class="ion-ios-telephone-outline"></i></span>
-                                    <span style="padding-top: 3%;" class="text"><a href="#">(770) 549-8304</a>
+                                    <span style="padding-top: 3%;" class="text"><a href="tel:770-549-8304">(770)
+                                        549-8304</a>
                                 </li>
                                 <li>
                                     <span class="icon"><i class="ion-ios-email-outline"></i></span>
@@ -369,7 +371,8 @@
                                             Bridge Trl SW</p>
                                         <p class="address">Conyers, GA. 30094</p>
                                         <ul class="contact-details">
-                                            <li><span>P:</span>(770) 549-8304</li>
+                                            <li><span>P:</span><a href="tel:770-549-8304">(770)
+                                                549-8304</a></li>
                                             <li><span>E:</span>eduard@edjrconstruction.com</li>
                                         </ul>
                                     </div>
@@ -426,7 +429,7 @@
                     <div class="off-canvas-contact-widget">
                         <div class="header-contact-info">
                             <ul class="header-contact-info__list">
-                                <li><i class="ion-android-phone-portrait"></i> <a href="tel://7705498304">(770)
+                                <li><i class="ion-android-phone-portrait"></i> <a href="tel:770-549-8304">(770)
                                         549-8304</a></li>
                                 <li><i class="ion-android-mail"></i><a
                                         href="mailto:eduard@edjrconstruction.com">eduard@edjrconstruction.com</a></li>
