--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Favicon -->
     <link rel="icon" href="./favicon.ico">
-    link rel="icon" sizes="48x48" href="assets/img/favicons/android-icon-48x48.png">
+    <link rel="icon" sizes="48x48" href="assets/img/favicons/android-icon-48x48.png">
     <link rel="icon" sizes="96x96" href="assets/img/favicons/android-icon-96x96.png">
     <link rel="icon" sizes="144x144" href="assets/img/favicons/android-icon-144x144.png">
     <link rel="icon" sizes="192x192" href="assets/img/favicons/android-icon-192x192.png">
@@ -116,7 +116,7 @@
                                         <div class="header-info-single-item__content">
                                             <h6 class="header-info-single-item__title">Phone</h6>
                                             <p class="header-info-single-item__subtitle"><a
-                                                    href="tel://7705498304">(770) 549-8304</a></p>
+                                                    href="tel:770-549-8304">(770) 549-8304</a></p>
                                         </div>
                                     </div>
                                     <div class="header-info-single-item">
@@ -711,7 +711,8 @@
                                             Bridge Trl SW</p>
                                         <p class="address">Conyers, GA. 30094</p>
                                         <ul class="contact-details">
-                                            <li><span>P:</span>(770) 549-8304</li>
+                                            <li><span>P:</span><a href="tel:770-549-8304">(770)
+                                                549-8304</a></li>
                                             <li><span>E:</span>eduard@edjrconstruction.com</li>
                                         </ul>
                                     </div>
@@ -770,7 +771,7 @@
                             <ul class="header-contact-info__list">
                                 <li>
                                     <i class="ion-android-phone-portrait"></i>
-                                    <a href="tel://7705498304">
+                                    <a href="tel:770-549-8304">
                                         (770) 549-8304
                                     </a>
                                 </li>
