--- a/service-details.html
+++ b/service-details.html
@@ -98,7 +98,7 @@
                                         </div>
                                         <div class="header-info-single-item__content">
                                             <h6 class="header-info-single-item__title">Phone</h6>
-                                            <p class="header-info-single-item__subtitle">(770) 549-8304</p>
+                                            <p class="header-info-single-item__subtitle"><a href="tel:770-549-8304">(770) 549-8304</a></p>
                                         </div>
                                     </div>
                                     <div class="header-info-single-item">
@@ -418,7 +418,8 @@
                                             Bridge Trl SW</p>
                                         <p class="address">Conyers, GA. 30094</p>
                                         <ul class="contact-details">
-                                            <li><span>P:</span>(770) 549-8304</li>
+                                            <li><span>P:</span><a href="tel:770-549-8304">(770)
+                                                549-8304</a></li>
                                             <li><span>E:</span>eduard@edjrconstruction.com</li>
                                         </ul>
                                     </div>
@@ -477,7 +478,7 @@
                             <ul class="header-contact-info__list">
                                 <li>
                                     <i class="ion-android-phone-portrait"></i>
-                                    <a href="tel://7705498304">(770) 549-8304</a>
+                                    <a href="tel:770-549-8304">(770) 549-8304</a>
                                 </li>
                                 <li>
                                     <i class="ion-android-mail"></i> 
