--- a/about.html
+++ b/about.html
@@ -98,7 +98,8 @@
                                         </div>
                                         <div class="header-info-single-item__content">
                                             <h6 class="header-info-single-item__title">Phone</h6>
-                                            <p class="header-info-single-item__subtitle">(770) 549-8304</p>
+                                            <p class="header-info-single-item__subtitle"><a href="tel:770-549-8304">(770)
+                                                549-8304</a></p>
                                         </div>
                                     </div>
                                     <div class="header-info-single-item">
@@ -322,20 +323,20 @@
 
                                 <div class="single-fact col-md-3 col-6 section-space--bottom--30">
                                     <img src="assets/img/icons/funfact-project.png" alt="">
-                                    <h1 class="counter">7000+</h1>
+                                    <h1 class="counter">8180</h1>
                                     <h4>Projects</h4>
                                 </div>
 
                                 <div class="single-fact col-md-3 col-6 section-space--bottom--30">
                                     <img src="assets/img/icons/funfact-clients.png" alt="">
-                                    <h1 class="counter">348</h1>
+                                    <h1 class="counter">3241</h1>
                                     <h4>Clients</h4>
                                 </div>
 
                                 <div class="single-fact col-md-3 col-6 section-space--bottom--30">
                                     <img src="assets/img/icons/funfact-success.png" alt="">
-                                    <h1 class="counter">114</h1>
-                                    <h4>Success</h4>
+                                    <h1 class="counter">0</h1>
+                                    <h4>Failures</h4>
                                 </div>
 
                                 <div class="single-fact col-md-3 col-6 section-space--bottom--30">
@@ -556,7 +557,8 @@
                                             Bridge Trl SW</p>
                                         <p class="address">Conyers, GA. 30094</p>
                                         <ul class="contact-details">
-                                            <li><span>P:</span>(770) 549-8304</li>
+                                            <li><span>P:</span><a href="tel:770-549-8304">(770)
+                                                549-8304</a></li>
                                             <li><span>E:</span>eduard@edjrconstruction.com</li>
                                         </ul>
                                     </div>
@@ -613,7 +615,7 @@
                     <div class="off-canvas-contact-widget">
                         <div class="header-contact-info">
                             <ul class="header-contact-info__list">
-                                <li><i class="ion-android-phone-portrait"></i><a href="tel://7705498304">(770)
+                                <li><i class="ion-android-phone-portrait"></i><a href="tel:770-549-8304">(770)
                                         549-8304</a></li>
                                 <li><i class="ion-android-mail"></i> <a
                                         href="mailto:eduard@edjrconstruction.com">eduard@edjrconstruction.com</a></li>
